dUMLeParser.py
# Generated from /Users/hania/Desktop/dUMLe.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class dUMLeParser ( Parser ):

    grammarFileName = "dUMLe.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'diagclass'", "':'", "'diagseq'", "'diagusecase'", 
                     "'['", "','", "']'", "'def'", "'('", "')'", "'return'", 
                     "'exec'", "'brief'", "'all'", "'for'", "'in'", "'labeled'", 
                     "'activate'", "'destroy'", "'.'", "'class'", "'abstract'", 
                     "'function'", "'public'", "'protected'", "'private'", 
                     "'note'", "'actor'", "'theme'", "'package'", "'interface'", 
                     "'block'", "'usecase'", "'fontcolor'", "'backgroundcolor'", 
                     "'fontsize'", "'font'", "'bordercolor'", "'inherit'", 
                     "'implement'", "'associate'", "'depend'", "'aggregate'", 
                     "'compose'", "'\r'", "<INVALID>", "' '", "<INVALID>", 
                     "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CR", "COM_SIGN", "BR", "NAME", "NL", 
                      "IND", "QUOTE", "ARROW", "TEXT" ]

    RULE_program = 0
    RULE_diagcreation = 1
    RULE_class_diagram = 2
    RULE_seq_diagram = 3
    RULE_use_case_diagram = 4
    RULE_instruction = 5
    RULE_obj_declaration = 6
    RULE_list_declaration = 7
    RULE_named_list_declaration = 8
    RULE_fun_declaraion = 9
    RULE_fun_call = 10
    RULE_execution = 11
    RULE_loop = 12
    RULE_connection = 13
    RULE_block_operation = 14
    RULE_obj_access = 15
    RULE_class_declaration = 16
    RULE_note = 17
    RULE_actor = 18
    RULE_theme = 19
    RULE_package_declaration = 20
    RULE_interface_declaration = 21
    RULE_arg_list = 22
    RULE_block = 23
    RULE_use_case = 24
    RULE_param_type = 25
    RULE_connection_type = 26

    ruleNames =  [ "program", "diagcreation", "class_diagram", "seq_diagram", 
                   "use_case_diagram", "instruction", "obj_declaration", 
                   "list_declaration", "named_list_declaration", "fun_declaraion", 
                   "fun_call", "execution", "loop", "connection", "block_operation", 
                   "obj_access", "class_declaration", "note", "actor", "theme", 
                   "package_declaration", "interface_declaration", "arg_list", 
                   "block", "use_case", "param_type", "connection_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    CR=45
    COM_SIGN=46
    BR=47
    NAME=48
    NL=49
    IND=50
    QUOTE=51
    ARROW=52
    TEXT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(dUMLeParser.EOF, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def diagcreation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.DiagcreationContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.DiagcreationContext,i)


        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = dUMLeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << dUMLeParser.T__0) | (1 << dUMLeParser.T__2) | (1 << dUMLeParser.T__3) | (1 << dUMLeParser.T__4) | (1 << dUMLeParser.T__7) | (1 << dUMLeParser.T__11) | (1 << dUMLeParser.T__14) | (1 << dUMLeParser.T__17) | (1 << dUMLeParser.T__18) | (1 << dUMLeParser.T__20) | (1 << dUMLeParser.T__21) | (1 << dUMLeParser.T__26) | (1 << dUMLeParser.T__27) | (1 << dUMLeParser.T__28) | (1 << dUMLeParser.T__29) | (1 << dUMLeParser.T__30) | (1 << dUMLeParser.T__31) | (1 << dUMLeParser.T__32) | (1 << dUMLeParser.BR) | (1 << dUMLeParser.NAME) | (1 << dUMLeParser.NL))) != 0):
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==dUMLeParser.BR or _la==dUMLeParser.NL:
                    self.state = 54
                    _la = self._input.LA(1)
                    if not(_la==dUMLeParser.BR or _la==dUMLeParser.NL):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 62
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [dUMLeParser.T__4, dUMLeParser.T__7, dUMLeParser.T__11, dUMLeParser.T__14, dUMLeParser.T__17, dUMLeParser.T__18, dUMLeParser.T__20, dUMLeParser.T__21, dUMLeParser.T__26, dUMLeParser.T__27, dUMLeParser.T__28, dUMLeParser.T__29, dUMLeParser.T__30, dUMLeParser.T__31, dUMLeParser.T__32, dUMLeParser.NAME]:
                    self.state = 60
                    self.instruction()
                    pass
                elif token in [dUMLeParser.T__0, dUMLeParser.T__2, dUMLeParser.T__3]:
                    self.state = 61
                    self.diagcreation()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 64
                        _la = self._input.LA(1)
                        if not(_la==dUMLeParser.BR or _la==dUMLeParser.NL):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 69
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(dUMLeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagcreationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_diagram(self):
            return self.getTypedRuleContext(dUMLeParser.Class_diagramContext,0)


        def seq_diagram(self):
            return self.getTypedRuleContext(dUMLeParser.Seq_diagramContext,0)


        def use_case_diagram(self):
            return self.getTypedRuleContext(dUMLeParser.Use_case_diagramContext,0)


        def getRuleIndex(self):
            return dUMLeParser.RULE_diagcreation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagcreation" ):
                listener.enterDiagcreation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagcreation" ):
                listener.exitDiagcreation(self)




    def diagcreation(self):

        localctx = dUMLeParser.DiagcreationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_diagcreation)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dUMLeParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.class_diagram()
                pass
            elif token in [dUMLeParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.seq_diagram()
                pass
            elif token in [dUMLeParser.T__3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.use_case_diagram()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_diagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(dUMLeParser.NAME, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def IND(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.IND)
            else:
                return self.getToken(dUMLeParser.IND, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_class_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_diagram" ):
                listener.enterClass_diagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_diagram" ):
                listener.exitClass_diagram(self)




    def class_diagram(self):

        localctx = dUMLeParser.Class_diagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(dUMLeParser.T__0)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 83
                self.match(dUMLeParser.BR)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.BR):
                    break

            self.state = 88
            self.match(dUMLeParser.NAME)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 89
                self.match(dUMLeParser.BR)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(dUMLeParser.T__1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 96
                self.match(dUMLeParser.BR)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(dUMLeParser.NL)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 103
                    self.match(dUMLeParser.IND)
                    self.state = 106 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==dUMLeParser.IND):
                        break

                self.state = 108
                self.instruction()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==dUMLeParser.BR:
                    self.state = 109
                    self.match(dUMLeParser.BR)
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 115
                self.match(dUMLeParser.NL)
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.IND):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Seq_diagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(dUMLeParser.NAME, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def IND(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.IND)
            else:
                return self.getToken(dUMLeParser.IND, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_seq_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq_diagram" ):
                listener.enterSeq_diagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq_diagram" ):
                listener.exitSeq_diagram(self)




    def seq_diagram(self):

        localctx = dUMLeParser.Seq_diagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_seq_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(dUMLeParser.T__2)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.match(dUMLeParser.BR)
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.BR):
                    break

            self.state = 127
            self.match(dUMLeParser.NAME)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 128
                self.match(dUMLeParser.BR)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(dUMLeParser.T__1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 135
                self.match(dUMLeParser.BR)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(dUMLeParser.NL)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 142
                    self.match(dUMLeParser.IND)
                    self.state = 145 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==dUMLeParser.IND):
                        break

                self.state = 147
                self.instruction()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==dUMLeParser.BR:
                    self.state = 148
                    self.match(dUMLeParser.BR)
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(dUMLeParser.NL)
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.IND):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_case_diagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(dUMLeParser.NAME, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def IND(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.IND)
            else:
                return self.getToken(dUMLeParser.IND, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_use_case_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse_case_diagram" ):
                listener.enterUse_case_diagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse_case_diagram" ):
                listener.exitUse_case_diagram(self)




    def use_case_diagram(self):

        localctx = dUMLeParser.Use_case_diagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_use_case_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(dUMLeParser.T__3)
            self.state = 162 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 161
                self.match(dUMLeParser.BR)
                self.state = 164 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.BR):
                    break

            self.state = 166
            self.match(dUMLeParser.NAME)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 167
                self.match(dUMLeParser.BR)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 173
            self.match(dUMLeParser.T__1)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 174
                self.match(dUMLeParser.BR)
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 180
            self.match(dUMLeParser.NL)
            self.state = 195 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 182 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 181
                    self.match(dUMLeParser.IND)
                    self.state = 184 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==dUMLeParser.IND):
                        break

                self.state = 186
                self.instruction()
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==dUMLeParser.BR:
                    self.state = 187
                    self.match(dUMLeParser.BR)
                    self.state = 192
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 193
                self.match(dUMLeParser.NL)
                self.state = 197 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.IND):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obj_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Obj_declarationContext,0)


        def list_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.List_declarationContext,0)


        def named_list_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Named_list_declarationContext,0)


        def fun_declaraion(self):
            return self.getTypedRuleContext(dUMLeParser.Fun_declaraionContext,0)


        def fun_call(self):
            return self.getTypedRuleContext(dUMLeParser.Fun_callContext,0)


        def execution(self):
            return self.getTypedRuleContext(dUMLeParser.ExecutionContext,0)


        def loop(self):
            return self.getTypedRuleContext(dUMLeParser.LoopContext,0)


        def connection(self):
            return self.getTypedRuleContext(dUMLeParser.ConnectionContext,0)


        def block_operation(self):
            return self.getTypedRuleContext(dUMLeParser.Block_operationContext,0)


        def getRuleIndex(self):
            return dUMLeParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = dUMLeParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instruction)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 199
                self.obj_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 200
                self.list_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 201
                self.named_list_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 202
                self.fun_declaraion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 203
                self.fun_call()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 204
                self.execution()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 205
                self.loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 206
                self.connection()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 207
                self.block_operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Obj_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Class_declarationContext,0)


        def note(self):
            return self.getTypedRuleContext(dUMLeParser.NoteContext,0)


        def actor(self):
            return self.getTypedRuleContext(dUMLeParser.ActorContext,0)


        def theme(self):
            return self.getTypedRuleContext(dUMLeParser.ThemeContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Package_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Interface_declarationContext,0)


        def block(self):
            return self.getTypedRuleContext(dUMLeParser.BlockContext,0)


        def use_case(self):
            return self.getTypedRuleContext(dUMLeParser.Use_caseContext,0)


        def getRuleIndex(self):
            return dUMLeParser.RULE_obj_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj_declaration" ):
                listener.enterObj_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj_declaration" ):
                listener.exitObj_declaration(self)




    def obj_declaration(self):

        localctx = dUMLeParser.Obj_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_obj_declaration)
        try:
            self.state = 218
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dUMLeParser.T__20, dUMLeParser.T__21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 210
                self.class_declaration()
                pass
            elif token in [dUMLeParser.T__26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.note()
                pass
            elif token in [dUMLeParser.T__27]:
                self.enterOuterAlt(localctx, 3)
                self.state = 212
                self.actor()
                pass
            elif token in [dUMLeParser.T__28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 213
                self.theme()
                pass
            elif token in [dUMLeParser.T__29]:
                self.enterOuterAlt(localctx, 5)
                self.state = 214
                self.package_declaration()
                pass
            elif token in [dUMLeParser.T__30]:
                self.enterOuterAlt(localctx, 6)
                self.state = 215
                self.interface_declaration()
                pass
            elif token in [dUMLeParser.T__31]:
                self.enterOuterAlt(localctx, 7)
                self.state = 216
                self.block()
                pass
            elif token in [dUMLeParser.T__32]:
                self.enterOuterAlt(localctx, 8)
                self.state = 217
                self.use_case()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NAME)
            else:
                return self.getToken(dUMLeParser.NAME, i)

        def obj_access(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.Obj_accessContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.Obj_accessContext,i)


        def getRuleIndex(self):
            return dUMLeParser.RULE_list_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_declaration" ):
                listener.enterList_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_declaration" ):
                listener.exitList_declaration(self)




    def list_declaration(self):
